apps/outline/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: outline
  namespace: outline
spec:
  selector:
    app: outline
  ports:
  - port: 80
    targetPort: 3000
